IndexedDB: Abort transactions because of leveldb errors part 3 https://bugs.webkit.org/show_bug.cgi?id=103960

Reviewed by Tony Chang.

Transactions are aborted when there are leveldb problems creating
indexes on an object store with existing data or when adding data to an
objectstore that has indexes.

* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore):
(WebCore::makeIndexWriters):
(WebCore::IDBObjectStoreBackendImpl::setIndexKeys):
(WebCore::IDBObjectStoreBackendImpl::ObjectStoreStorageOperation::perform):


Canonical link: https://commits.webkit.org/122353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136775 268f45cc-cd09-0410-ab3c-d52691b4dbfc